--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = public
 	url = git@github.com:sekhet-aaru/sekhet-aaru.github.io.git
 	branch = master
+[submodule "themes/hermit"]
+	path = themes/hermit
+	url = https://github.com/Track3/hermit.git
